Fixed bug #41635 (SoapServer and zlib.output_compression with FastCGI result in major slowdown

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@239692 c90b9560-bf6c-de11-be94-00142212c4b1